tests/trybuild/entity/type_unexpected_token.rs
use brood::Entity;

struct A;
struct B;

type Entity = Entity!(A, + B,);

fn main() {}
